--- a/web/capacitor.config.json
+++ b/web/capacitor.config.json
@@ -1,5 +1,6 @@
 {
   "appId": "io.github.larrychiem.pythonpractice",
   "appName": "Python IKM Practice",
-  "webDir": "dist"
+  "webDir": "dist",
+  "bundledWebRuntime": false
 }
