--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "@capacitor/cli": "^8.0.2",
     "@capacitor/core": "^8.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-syntax-highlighter": "^16.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
